--- a/client/src/components/Wishlist/Wishlist.css
+++ b/client/src/components/Wishlist/Wishlist.css
@@ -48,15 +48,16 @@
     background-color: white;
     position: absolute;
     width: 80%;
+    max-width: 500px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 0.5rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     align-content: center;
-    box-shadow: 0 0 8px #666;
-    border-radius: 2px;
+    box-shadow: 0 0 12px #333;
+    border-radius: 4px;
 }
 
 .add-item-modal .modal-title,
