--- a/client/src/components/Wishlist/Wishlist.css
+++ b/client/src/components/Wishlist/Wishlist.css
@@ -43,8 +43,7 @@
     font-size: 12px;
 }
 
-.add-item-modal,
-.edit-item-modal {
+.wishlist-modal {
     background-color: white;
     position: absolute;
     width: 80%;
@@ -60,13 +59,11 @@
     border-radius: 4px;
 }
 
-.add-item-modal .modal-title,
-.edit-item-modal .modal-title {
+.wishlist-modal .modal-title {
     text-align: center;
 }
 
-.add-item-modal *,
-.edit-item-modal * {
+.wishlist-modal * {
     margin-bottom: 4px;
     margin-top: 4px;
 }
