--- a/client/src/components/Wishlist/Wishlist.css
+++ b/client/src/components/Wishlist/Wishlist.css
@@ -2,33 +2,42 @@
     width: 100%;
 }
 
-.wishlist-item:first-child {
-    border-top: 1px #ccc solid;
-}
-
-.wishlist-item {
-    border-bottom: 1px #ccc solid;
-    padding: 8px;
-}
-
-.wishlist-item-top {
+.wishlist-item,
+.wishlist-item-placeholder {
+    width: 100%;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+    background: white;
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    min-height: 10rem;
+}
+
+.wishlist-item-placeholder {
+    border-width: 2px;
+    border-style: dashed;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    background: transparent;
 }
 
 .wishlist-name {
     text-align: left;
-    width: 75%;
 }
 
 .wishlist-actions {
-    text-align: right;
-    width: 25%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .wishlist-price {
-    text-align: left;
-    width: 100%;
+    text-align: right;
     font-weight: 700;
 }
 
