--- a/client/src/components/Wishlist/Wishlist.css
+++ b/client/src/components/Wishlist/Wishlist.css
@@ -51,3 +51,28 @@
     width: 100%;
     font-size: 12px;
 }
+
+.wishlist-modal {
+    background-color: white;
+    position: absolute;
+    width: 80%;
+    max-width: 500px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    box-shadow: 0 0 12px #333;
+    border-radius: 4px;
+}
+
+.wishlist-modal .modal-title {
+    text-align: center;
+}
+
+.wishlist-modal * {
+    margin-bottom: 4px;
+    margin-top: 4px;
+}
